<resources>
    <string-array name="report_reasons">
        <item>Venda/Promo</item>
        <item>Golpe</item>
        <item>Atendimento ao cliente</item>
        <item>Outros</item>
    </string-array>
    <string name="app_name">CallGuard</string>
    <string name="username">Username</string>
    <string name="senha">Senha</string>
    <string name="mantenha_me_logado">Mantenha-me logado</string>
    <string name="login">Login</string>
    <string name="n_o_tem_uma_conta_cadastre_se">Não tem uma conta? Cadastre-se!</string>
    <string name="recupere_sua_senha">Recupere sua senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="celular">Celular</string>
    <string name="e_mail">E-mail</string>
    <string name="callguard">Callguard</string>
    <string name="comunidade">Comunidade</string>
    <string name="hist_rico">Histórico</string>
    <string name="bloquear">Bloquear</string>
    <string name="configura_es">Configurações</string>
    <string name="logout">LOGOUT</string>
    <string name="n_meros_reportados_mais_de_100_vezes_s_o_bloqueados_automaticamente">Números reportados mais de 100 vezes são bloqueados automaticamente</string>
    <string name="bloquear_n_mero_automaticamente">Bloquear número automaticamente</string>
    <string name="no_calls">Não tem nenhuma chamada no histórico</string>
    <string name="chamar">Chamar</string>
    <string name="reportar">Reportar</string>
    <string name="motivo_do_report">Motivo do Report</string>
</resources>
