<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_grey"
    android:gravity="center"
    tools:context=".UI.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:src="@drawable/callguardlogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_logo"
            android:gravity="center"
            android:text="@string/callguard"
            android:textSize="50sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center">

        <Button
            android:id="@+id/Button_comunidade"
            android:layout_width="141dp"
            android:layout_height="96dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/baseline_people_24"
            android:text="@string/comunidade"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Button_historico"
            android:layout_width="141dp"
            android:layout_height="96dp"
            android:layout_margin="20dp"
            android:layout_toRightOf="@id/Button_comunidade"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/baseline_history_24"
            android:text="@string/hist_rico"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Button_bloquear"
            android:layout_width="141dp"
            android:layout_height="96dp"
            android:layout_below="@id/Button_comunidade"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/baseline_block_24"
            android:text="@string/bloquear"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Button_config"
            android:layout_width="141dp"
            android:layout_height="96dp"
            android:layout_below="@id/Button_historico"
            android:layout_margin="20dp"
            android:layout_toRightOf="@id/Button_bloquear"
            android:backgroundTint="@color/white"

            android:drawableEnd="@drawable/baseline_settings_24"
            android:text="@string/configura_es"
            android:textColor="@color/black" />

    </RelativeLayout>


</RelativeLayout>